syntax = "proto3";

package flight;

option go_package = "pb/flights";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Flight {
  string id = 1;
  string plane_number = 2;
  string departure_point = 3;
  string destination_point = 4;
  google.protobuf.Timestamp departure_time = 5;
  google.protobuf.Timestamp estimated_arrival_time = 6;
  google.protobuf.Timestamp real_departure_time = 7;
  google.protobuf.Timestamp real_arrival_time = 8;
  string status = 9;
  int32 available_seats = 10;
}

message FlightId {
  string id = 1;
}

message FlightList {
  repeated Flight flights = 1;
}

message FlightStatusRequest {
  string flight_id = 1;
  string status = 2;
}

message BookFlightRequest {
  string flight_id = 1;
  int32 seat_number = 2;
}

service FlightService {
  rpc UpsertFlight(Flight) returns (FlightId);
  rpc GetFlightsList(Flight) returns (FlightList);
  rpc GetFlightById(FlightId) returns (Flight);
  rpc ChangeFlightStatus(FlightStatusRequest) returns (google.protobuf.Empty);
  rpc BookFlight(BookFlightRequest) returns (google.protobuf.Empty);
}
